Made PowWow a past event. Linked to Leon's Pow Wow pictures. Made a page for Hart's 150th birthday Added Holiday Boutique.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -172,7 +172,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               5px" align="center"> <h2 align="center"> 
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
-are proud to present the<br></h2></p>
+would like to thank you for coming to the<br></h2></p>
                             <h2 align="center"> 21<sup>st</sup> Annual Hart of the West</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
@@ -181,7 +181,13 @@ are proud to present the<br></h2></p>
                                 height="112" width="227"></p>
                             <p align="center"> </p>
                             <h2 align="center"> and Native American
-                              Craft Fair </h1>
+                              Craft Fair <br>
+                                            Navigate to our friends at SCVTV to see pictures from 
+                                            <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
+                                            2014's Hart of the West Native American Pow Wow!
+                                            </a>
+                              </h2>
+                    <hr>
 <p><h2 align="center">
 September 27<sup>th</sup> &mdash; 10am to 7pm <br>
 September 28<sup>th</sup> &mdash; 10am to 6pm
@@ -192,7 +198,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
 <p>Honored Founders: Norm Phillips, Lina Schultz, Bill &ldquo;Standing Bear&rdquo; Kimmey</p>
 </h3>
                             <h2 id="PowWowNote" align="center"><b>
-                                    Vendors, please contact Cindy Reeves 
+                                    Vendors, for 2015, please contact Cindy Reeves 
                                     at the phone number shown below.</b><br>
 							</h2>
                         </tr>
