--- a/index.htm
+++ b/index.htm
@@ -289,15 +289,6 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Sep. 27<sup>th</sup> &amp; 28<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-									  Hart of the West
-                                      <h3><a href="Event_Pages/powwow.html">
-                                      Pow Wow</a></h3>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Oct. 4<sup>th</sup> 7pm
                                       </td>
                                       <td id="Event">
@@ -308,7 +299,7 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       </a>
                                       </td>
                                       <td id="EventDetail">
-                                      Seating is limited!  First come, first seated.
+                                      Seating is limited
                                       </td>
                                     </tr>
                                     <tr>
@@ -333,24 +324,53 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       </a>
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Nov. 29<sup>th</sup> &amp; 30<sup>th</sup> 9am-4pm
+                                      </td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/HolidayBoutique2014.jpg" rel="lightbox[crafts]">
+                                      <h3>
+                                      Hart's Holiday Boutique &amp; Craft Fair
+                                      </h3>
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Dec. 6<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/HappyBirthdayHart.html">
+                                      <h3>
+                                      Hart's Birthday Celebration, featuring Candlelight Mansion Tour 
+                                      and the music of Cow Bop!
+                                      </h3>
+                                      </a>
+                                      </td>
+                                    </tr>
                                   </tbody>
                                 </table>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+                                            <h3>Navigate to our friends at SCVTV to see pictures from 
+                                            <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
+                                            2014's Hart of the West Native American Pow Wow!
+                                            <img src="Event_Pages/powwow/PowWow2014.jpg" />
+                                            </a></h3>
+                                            </a>
+</h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                             <h3>Go to our 
                                             <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
                                             Facebook page</a>
-                                            to see pictures from the event as they become available.</h3>
+                                            to see pictures from 2014's Silents Under the Stars!</h3>
                                             <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
                                             <img src="Event_Pages/silents/silents2014/panorama-sm.jpg"/><br>
 <img src="Event_Pages/images/whiteoak-sm.jpg"/>
                                             </a>
 </h2>
-<h3>This year, we were proud to feature music provided by recording artists, "New West"</h3>
-<a href="http://cowboyband.com/" target="_blank">
-<img src="Event_Pages/silents/NW_standing.jpg"/></a>
-
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
