--- a/index.html
+++ b/index.html
@@ -289,20 +289,6 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Oct. 4<sup>th</sup> 7pm
-                                      </td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/GhostAndMrChicken.png" rel="lightbox[hartoween]">
-                                      <h3>
-                                      "Hart-O-Ween" Movie:  The Ghost &amp; Mr. Chicken
-                                      </h3>
-                                      </a>
-                                      </td>
-                                      <td id="EventDetail">
-                                      Seating is limited
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Oct. 12<sup>th</sup><br>
                                       11am-4pm
                                       </td>
@@ -368,8 +354,13 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                             to see pictures from 2014's Silents Under the Stars!</h3>
                                             <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
                                             <img src="Event_Pages/silents/silents2014/panorama-sm.jpg"/><br>
-<img src="Event_Pages/images/whiteoak-sm.jpg"/>
                                             </a>
+                                            <h3>
+And, if you missed the fun and would like to see the movie and a more in-depth interview with our special guest, Vola Vale's grandson Dennis McDougal by hosts E.J. Stephens and Bill West, go see the 
+                                            <a href="http://scvtv.com/?p=18843" target="_blank">
+SCV In The Movies Episode!
+                                            </h3>
+<img src="Event_Pages/images/whiteoak-sm.jpg"/>
 </h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
