--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -126,18 +126,17 @@ Saturday, December 6<sup>th</sup><br>
 </a>
 <h3>
   Event open only to members of Friends of Hart Park.
-</h3><h2>
-<a href="../The_Friends/membership.html">
-   Join now at the Family level or above</h2>
-</a>
-<h3>
-   and receive 2 free tickets to this very special evening honoring Bill Hart!<br>
-</h3>
+All active members of Friends of Hart Park are entitled to one (1) free ticket to the event, and members who have
+<h2><a href="../The_Friends/membership.html">
+joined at the Family level or above</a></h2><h3>will receive two (2) free tickets.</h3>
+     As this is a "member's only" event;  be sure to join the FOHP or enhance your membership to a higher level to receive your free ticket(s).  </h3>
+     <h2>Reservations are required and can be made by phoning <b>661-222-9542</b>. Seating is limited so make your reservation early!
+</h2>
 <section>
 <img id="left" src="../images/HartParkLogo-sm2.png" />
 <img id="right" src="../images/map2.png" /><br>
-<h4 id="bolder">Stay tuned for more details!</h4><br>
 <h4>
+<br>
 William S. Hart Regional Park<br>24151 Newhall Ave.<br>Newhall, CA  91321</h4>
 </section>
 					</TD>
