--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       <a href="Event_Pages/HappyBirthdayHart.html">
                                       <h3>
                                       Hart's Birthday Celebration, featuring Candlelight Mansion Tour 
-                                      and the music of Cow Bop!
+                                      and the music of Cow Bop!  Be a member for free ticket(s) and call 661-222-9542 
+                                      for Reservations. 
                                       </h3>
                                       </a>
                                       </td>
