Added Senior/Student to membership page; deleted past event Rose Show.

--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -191,15 +191,16 @@ function MM_swapImage() { //v3.0
 <input type="hidden" name="hosted_button_id" value="F7U4PL4HUPBSW">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select the level of your new membership:">Select the level of your new membership:</td></tr><tr><td><select name="os0">
-	<option value="Individual">Individual $25.00 USD</option>
-	<option value="Family">Family $40.00 USD</option>
-	<option value="Sponsor">Sponsor $75.00 USD</option>
-	<option value="Patron">Patron $125.00 USD</option>
-	<option value="Silver">Silver $250.00 USD</option>
-	<option value="Gold">Gold $500.00 USD</option>
-	<option value="Diamond">Diamond $1,000.00 USD</option>
-	<option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
-	<option value="Volunteer (see Note)">Volunteer (see Note) $25.00 USD</option>
+    <option value="Individual">Individual $25.00 USD</option>
+    <option value="Family">Family $40.00 USD</option>
+    <option value="Sponsor">Sponsor $75.00 USD</option>
+    <option value="Patron">Patron $125.00 USD</option>
+    <option value="Silver">Silver $250.00 USD</option>
+    <option value="Gold">Gold $500.00 USD</option>
+    <option value="Diamond">Diamond $1,000.00 USD</option>
+    <option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
+    <option value="Volunteer (see Note)">Volunteer (see Note) $25.00 USD</option>
+    <option value="Senior/Student">Senior/Student $15.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Phone Number:">Phone Number:</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 </table>
@@ -207,6 +208,7 @@ function MM_swapImage() { //v3.0
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 </p>
 					</TD>
