Added the time to the birthday event.

--- a/Event_Pages/HappyBirthdayHart.html
+++ b/Event_Pages/HappyBirthdayHart.html
@@ -116,7 +116,7 @@ function MM_swapImage() { //v3.0
 Bill Hart's 150th Birthday Party<br>
 </h1>
 <h2>
-Saturday, December 6<sup>th</sup><br>
+Saturday, December 6<sup>th</sup> at 7<sub>pm</sub><br>
 </h2>
 <h3 id="indent">
  Enjoy an evening candlelight tour of Bill Hart's holiday decorated mansion and then continue the celebration at Hart Hall with wine and hors d'oeuvres and the exciting music of  the one and only<br> </h3>
