--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Dec. 6<sup>th</sup>
+                                      <td id="EventDate">Dec. 6<sup>th</sup> at 7pm
                                       </td>
                                       <td id="Event">
                                       <a href="Event_Pages/HappyBirthdayHart.html">
