Updated board members on the website.

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -142,7 +142,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                       border="0" height="385" width="2"> </td>
                   <td valign="top" width="876">
                     <div align="center"> <img
-                        src="images/board2012.png" border="0">
+                        src="images/board2014.jpg" border="0">
                       <hr>
                       <table border="0" width="760">
                         <tbody>
@@ -163,15 +163,6 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Gerry Hogan</td>
-                            <td align="left">Director/2nd Vice President</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Andree Walper<br>
-                            </td>
-                            <td align="left">Director</td>
-                          </tr>
-                          <tr>
                             <td id="BOLD" align="left">Cindy Beals<br>
                             </td>
                             <td align="left">Director/Treasurer</td>
@@ -189,7 +180,8 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             </td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Lina Schultz</td>
+                            <td id="BOLD" align="left">Bill West<br>
+                            </td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
@@ -202,21 +194,11 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Dick Meier<br>
-                            </td>
+                            <td id="BOLD" align="left">Leon Worden</td>
                             <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Nadiya
-                              Littlewarrior</td>
-                            <td align="left">Director</td>
-                          </tr>
-                          <tr>
-                            <td id="BOLD" align="left">Edrie McMeekin</td>
-                            <td align="left">Director</td>
-                            <td align="left"><br>
-                            </td>
-                            <td id="BOLD" align="left">Bill West<br>
+                            <td id="BOLD" align="left">Andree Walper<br>
                             </td>
                             <td align="left">Director</td>
                           </tr>
@@ -250,7 +232,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">&nbsp;</td>
                             <td id="BOLD" align="left">Margi Bertram<br>
                             </td>
-                            <td align="left">Administrator</td>
+                            <td align="left">Museum Administrator</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left"><br>
