--- a/index.html
+++ b/index.html
@@ -241,25 +241,6 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-                                <tr>
-                                <td>
-                                <h3>Click on the badge below to see the program for the</h3>
-                                <h2 align="center">National Peace Officers Memorial Day Event at the Hart</h2>
-<a href="Event_Pages/NationalPoliceWeek.jpg" rel="lightbox[police]" 
-title="National Peace Officers Memorial Day Event at the Hart">
-<center> <img src="Event_Pages/thumbs/NationalPoliceWeek.jpg"/></center></a>
-                                <h3>It captures the agenda, but can never convey the <b>meaning</b>
-                                of this informative, touching and important event.</h3>
-</td>
-</tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -317,10 +298,15 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+                                    <a href="Event_Pages/HappyBirthdayHart.html">
+                                    <img src="Event_Pages/hartsbirthday.png"/>
+                                    </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                             <h3>Navigate to our friends at SCVTV to see pictures from 
                                             <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
                                             2014's Hart of the West Native American Pow Wow!
-                                            <img src="Event_Pages/powwow/PowWow2014.jpg" />
                                             </a></h3>
                                             </a>
 </h2>
@@ -339,7 +325,6 @@ And, if you missed the fun and would like to see the movie and a more in-depth i
                                             <a href="http://scvtv.com/?p=18843" target="_blank">
 SCV In The Movies Episode!
                                             </h3>
-<img src="Event_Pages/images/whiteoak-sm.jpg"/>
 </h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
