Removed last of 2014 events, and put up pictures from Hart's 150th birthday.

--- a/index.htm
+++ b/index.htm
@@ -262,44 +262,25 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
-                                <h2>2014 Calendar of Events</h2>
-                                <h4>Click on each event for details, as
-                                they become available.</h4><br>
+                                <h2>2015 Calendar of Events</h2>
+                                <h4>Stay tuned for Friends of Hart Park 2015 events as
+                                they become available!</h4><br>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Nov. 29<sup>th</sup> &amp; 30<sup>th</sup> 9am-4pm
-                                      </td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/HolidayBoutique2014.jpg" rel="lightbox[crafts]">
-                                      <h3>
-                                      Hart's Holiday Boutique &amp; Craft Fair
-                                      </h3>
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Dec. 6<sup>th</sup> at 7pm
-                                      </td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/HappyBirthdayHart.html">
-                                      <h3>
-                                      Hart's Birthday Celebration, featuring Candlelight Mansion Tour 
-                                      and the music of Cow Bop!  Be a member for free ticket(s) and call 661-222-9542 
-                                      for Reservations. 
-                                      </h3>
-                                      </a>
-                                      </td>
+                                      <td id="EventDate"></td>
+                                      <td id="Event"></td>
                                     </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <a href="Event_Pages/HappyBirthdayHart.html">
-                                    <img src="Event_Pages/hartsbirthday.png"/>
+                                    <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h3>
+                                    <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">
+                                    <img src="Event_Pages/HappyBirthdayHart.jpg" />
                                     </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
