--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                     </tr>
                                   </tbody>
                                 </table>
+                                    <img src="images/HartHappyHolidays.png" />
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
